@@ -1,3 +1,9 @@
+2004-08-26  MenTaLguY <mental@rydia.net>
+
+	* src/document-private.h, src/document.h, src/document.cpp:
+
+	  add notification signal when resources are added or removed
+
 2004-08-25  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/xml/repr-css.cpp (sp_repr_css_print):
